--- a/Source/analysis.lfm
+++ b/Source/analysis.lfm
@@ -18,7 +18,7 @@ object FormAnalysis: TFormAnalysis
     ClientHeight = 440
     ClientWidth = 966
     TabOrder = 0
-    object Memo1: TMemo
+    object MemoSQL: TMemo
       Left = 414
       Height = 438
       Top = 1
@@ -74,7 +74,7 @@ object FormAnalysis: TFormAnalysis
       Width = 5
     end
   end
-  object GroupBox1: TGroupBox
+  object GroupBoxOracle: TGroupBox
     Left = 16
     Height = 96
     Top = 464
